Change name of projects button to 'New Issue' because we may actually skip the project list now that we have custom application choices.

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,6 +4,7 @@
   "openInGitLab" : "Open in GitLab",
   "issues": "Issues",
   "projects": "Projects",
+  "newIssue": "New Issue",
   "issue": {
     "title": "Title",
     "labels": "Labels",
