--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -24,11 +24,24 @@
     "priority": "Priority",
     "requester": "Requester",
     "status": "Status",
-    "created": "Created"
+    "created": "Created",
+    "application": "Application",
+    "observedBehavior": "Observed Behavior",
+    "observedBehaviorTitle": "WHAT YOU OBSERVED THAT WAS INCORRECT",
+    "loginInfo": "Login Used to Reproduce the Issue",
+    "loginInfoTitle": "FILL LOGIN INFO",
+    "client": "Client",
+    "clientInfoTitle": "Client Name as it Appears in GT Company Management NOT SF",
+    "site": "Site",
+    "siteInfoTitle": "SITE INFO",
+    "errorMessage": "Error Message (optional)",
+    "errorMessageTitle": "EXACT ERROR MESSAGE",
+    "detailedSteps": "Detailed Steps to Reproduce",
+    "detailedStepsTitle": "- LIST DETAILS\n- TO REPRODUCE"
   },
   "error":{
     "noDataReturned": "No data returned. Please check your API key.",
-    "noSubjectIncluded": "You must include a subject.",
+    "requiredFieldMissing": "One or more required fields is empty.",
     "issueTicketNotFound": "Specified issue ticket was not found in "
   }
 }
